--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Web Designer</p>
-                <h1>Hi, I'm <span id="name">Shivam</span><br> Sorout From <span id="country">INDIA</span></h1>
+                <p>Java Developer</p>
+                <h1>Hi, My name is <br><span id="name">Shivam </span></h1>
+                <h4>I'm a <span id="country">{Full Stack Java Developer}</Full></span></h4>
             </div>
         </div>
     </div>
@@ -41,11 +42,8 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia tenetur asperiores, a facilis,
-                        magni et ullam possimus corrupti quisquam odit magnam non. Tempora mollitia voluptate doloremque
-                        nulla voluptate adipisci deleniti accusamus hic! Molestiae pariatur consequuntur cumque facilis?
-                        Eum non quam animi sapiente quia nobis necessitatibus tempore, officia ea provident fuga aliquid
-                        vitae commodi reiciendis, quo esse quisquam est?</p>
+                    <p>A motivated individual with knowledge of languages and development tools, seeking a position in growth-oriented company where I can
+                        use my skills to the advantage of the company while having the scope to develop my own skills</p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -53,9 +51,11 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br> Designing Web/App Interface</li>
-                            <li><span>Web Development</span><br> Web App Development</li>
-                            <li><span>App Development</span><br> Building Android/iOS Apps</li>
+                            <li><span>Full Stack Java Development</span><br> JAVA, Object Oriented Programming, Hibernate,<br>
+                                JSP and Servlet, Collection Framework, JDBC</li>
+                            <li><span>Web Development</span><br>HTML, CSS, JavaScript, Bootstrap,
+                                ReactJs (Beginner)</li  >
+                            <li><span>Database Designing</span><br>MySQL Server, SQL (Structured Query Language)</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -84,6 +84,13 @@
             <h1 class="sub-title">My Services</h1>
             <div class="services-list">
                 <div>
+                    <i class="fa-brands fa-apple"></i>
+                    <h2>App Design</h2>
+                    <p>Mobile App Design and Development, E-Commerce, Graphic Designing and Website Design and Development Using Java Language With the help of Database
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div id="div2">
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vel explicabo accusantium
@@ -91,17 +98,9 @@
                     </p>
                     <a href="#">Learn More</a>
                 </div>
-                <div id="div2">
+                <div>
                     <i class="fa-solid fa-crop"></i>
                     <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vel explicabo accusantium
-                        reiciendis Lorem ipsum dolor sit amet.
-                    </p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div>
-                    <i class="fa-brands fa-apple"></i>
-                    <h2>App Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vel explicabo accusantium
                         reiciendis Lorem ipsum dolor sit amet.
                     </p>
@@ -120,27 +119,26 @@
                 <div class="work">
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The App connects you the talented people around the world.
-                            Download it from the play Store.</p>
+                        <h3>Bank Application</h3>
+                        <p>This Application Provides Menu to a User Using that User can perform functions like Login Account, View Balance, Deposit Money, Withdraw Money, Change Password and Transfer Money To The Other Customer</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer2">
-                        <h3>Music App</h3>
-                        <p>The App connects you the talented people around the world.
-                            Download it from the play Store.</p>
+                        <h3>Online Product Management</h3>
+                        <p>User can login and check the products and management of the
+                            system, can add/remove/update products from lists, categorize and
+                            filter products, customer details etc</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
-                        <h3>Online Shoping App</h3>
-                        <p>The App connects you the talented people around the world.
-                            Download it from the play Store.</p>
+                        <h3>Mini Restaurant</h3>
+                        <p> Designed for the purpose to booking Restaurants for special occasion Like maariage, reception, engagement etc. And Can also Order food, meals, dinner, lunch, desserts.</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
